# 0xmycf.github.io

./: .gitignore  CNAME  README.md
docs/: index-a1300d7856ae86f9.js  index-a1300d7856ae86f9_bg.wasm  index.html
website/: Cargo.toml  build.sh  index.html  index.scss
website/data/: files.sh  front.html  front.md  test.html
website/src/: app.rs  main.rs  routes.rs
website/src/util/: util.rs
