[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "mycf's github website"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo = "0.6.0"
web-sys = "0.3.56"
